objects/Renewals_Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Asset_URL_Append_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Asset URL Append Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bread_Crum_HyperLink_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to show and hide the bread crum</description>
        <label>Bread Crum HyperLink Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Timeline__c</fullName>
        <label>Default Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_limit__c</fullName>
        <label>Opty_limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_IB_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RM IB Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Notif_mail_body__c</fullName>
        <label>RM_Notif_mail_body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalsAttritionListView__c</fullName>
        <label>RenewalsAttritionListView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalsLostListView__c</fullName>
        <label>RenewalsLostListView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalsOverdueListView__c</fullName>
        <label>RenewalsOverdueListView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalsUpcomingListView__c</fullName>
        <label>RenewalsUpcomingListView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sav_limit__c</fullName>
        <label>Sav limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Limit__c</fullName>
        <label>Territory Limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timelines__c</fullName>
        <label>Timelines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpSellCrossSellListView__c</fullName>
        <label>UpSellCrossSellListView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_line_message__c</fullName>
        <description>To display warning message in sync expected term button on my portfolio page</description>
        <label>default line message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_success_message__c</fullName>
        <description>To display Success message in sync expected term button on my portfolio page</description>
        <label>default success message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_sync_message__c</fullName>
        <label>default sync message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_term_message__c</fullName>
        <label>default term message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Renewals Portfolio page list of values</description>
    <label>Renewals Portfolio</label>
</CustomObject>